# telegram-event-bot

./: .env.sample  .gitignore  ACKNOWLEDGEMENTS  Cargo.toml  README.md  assets
event-web/: Cargo.toml  README.md
event-web/assets/: styles.css
event-web/src/: error.rs  event.rs  lib.rs  main.rs  views.rs
migrations/2018-02-03-003810_create_chat_system/: down.sql  up.sql
migrations/2018-02-03-004212_create_chat/: up.sql
migrations/2018-02-03-005017_create_event/: up.sql
migrations/2018-02-03-005927_create_host/: down.sql  up.sql
migrations/2018-02-04-205700_create_user/: up.sql
migrations/2018-02-04-205708_create_user_chat/: down.sql  up.sql
migrations/2018-02-04-222730_make_host_reference_user/: down.sql  up.sql
migrations/2018-03-01-235806_new_event_links/: down.sql  up.sql
migrations/2018-03-06-003937_add_username_column_to_user/: down.sql  up.sql
migrations/2018-03-06-004612_add_timezone_column_to_event/: down.sql  up.sql
migrations/2018-03-08-013031_edit_event_links/: down.sql  up.sql
src/: actors.rs  chat.rs  chat_system.rs  conn.rs  error.rs  event.rs  host.rs  lib.rs  main.rs  telegram.rs  user.rs  util.rs
src/actors/: mod.rs
src/actors/db_actor/: actor.rs  messages.rs  mod.rs
src/actors/db_broker/: actor.rs  messages.rs  mod.rs
src/actors/event_actor/: actor.rs  mod.rs
src/actors/new_event_actor/: actor.rs  event_stages.rs  messages.rs  mod.rs
src/actors/telegram_actor/: actor.rs  messages.rs  mod.rs
src/actors/telegram_message_actor/: actor.rs  messages.rs  mod.rs
src/actors/timer/: actor.rs  messages.rs  mod.rs
src/actors/users_actor/: actor.rs  messages.rs  mod.rs
src/models/: chat.rs  chat_system.rs  conn.rs  edit_event_link.rs  event.rs  mod.rs  new_event_link.rs  user.rs
