[package]
name = "event-bot"
version = "0.1.0"
authors = ["Riley Trautman <rileyt@spiceworks.com>"]

[dependencies]
actix = "0.4"
base-x = "0.2"
chrono = "0.4"
chrono-tz = "0.4"
dotenv = "0.10"
env_logger = "0.5"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
futures-state-stream = "0.2"
log = "0.4"
rand = "0.4"
time = "0.1"
telebot = { git = "https://github.com/asonix/telebot", branch = "asonix/hyper" }
tokio-core = "0.1"
tokio-timer = "0.1"

[dependencies.tokio-postgres]
version = "0.3"
features = ["with-chrono"]

[dependencies.event-web]
version = "0.1"
path = "./event-web"
