[package]
name = "event-bot"
description = "A bot for Telegram to manage time-based events"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/telegram-event-bot"
readme = "README.md"
keywords = ["telegram", "events", "bot"]

[dependencies]
actix = "0.5"
base-x = "0.2"
chrono = "0.4"
chrono-tz = "0.4"
dotenv = "0.10"
env_logger = "0.5"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
futures-state-stream = "0.2"
log = "0.4"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
telebot = { git = "https://github.com/bytesnake/telebot" }
tokio-core = "0.1"
tokio-reactor = "0.1"
tokio-timer = "0.2"

[dependencies.tokio-postgres]
version = "0.3"
features = ["with-chrono"]

[dependencies.event-web]
version = "0.1"
path = "./event-web"
