[package]
name = "event-web"
version = "0.1.0"
authors = ["Riley Trautman <rileyt@spiceworks.com>"]

[dependencies]
actix = "0.4"
actix-web = "0.3"
bcrypt = "0.1"
chrono = "0.4"
chrono-tz = "0.4"
failure = "0.1"
futures = "0.1"
http = "0.1"
maud = "0.17"
serde = "1.0"
serde_derive = "1.0"

[patch.crates-io]
parse-zoneinfo = { git = "https://github.com/asonix/parse-zoneinfo.git", branch = "asonix/fix-regex" }
