[package]
name = "event-web"
description = "The Web UI for Telegram Event Bot"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]
repository = "https://github.com/asonix/telegram-event-bot"
readme = "README.md"
keywords = ["telegram", "events", "bot"]

[dependencies]
actix = "0.5"
actix-web = "0.5"
bcrypt = "0.2"
chrono = "0.4"
chrono-tz = "0.4"
failure = "0.1"
futures = "0.1"
http = "0.1"
maud = { version = "0.17", git = "https://github.com/lfairy/maud" }
serde = "1.0"
serde_derive = "1.0"
